--- a/web/src/container/menu/index.module.css
+++ b/web/src/container/menu/index.module.css
@@ -1,3 +1,9 @@
 .menu {
   border-inline-end: none;
+
+  .title {
+    justify-content: space-between;
+    width: 100%;
+    padding-right: 8px;
+  }
 }
